some restyling work but delete buttons are all wonky

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       <link rel="stylesheet" href="style.css">
       
       <ul id="js-todo-list" class="todo-list">
-        <li class="todo-item" id="todoLi"></li>
+        <li class="todo-item" id="todoLi">
+         
+        </li>
+        <button class="delete-todo">
+
+        </button>
       </ul>
       <form id="js-form">
         <input autofocus type="text" aria-label="Enter a new todo item" placeholder="Enter a task." id="js-todo-input">
