--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
-    <title>Ye Olde To Do App 3</title>
+    <title>Ye Olde To Do App</title>
     <link rel="icon" href="icon.png" type="image/x-icon">
 </head>
 <main>
     <div class="container">
-      <h1 class="app-title">Ye Olde To Do List 3</h1>
+      <h1 class="app-title">Ye Olde To Do List</h1>
         <div class="checklist-wrapper">
                 <img src="https://img.icons8.com/wired/64/000000/checklist.png" class="center">
         </div>
