added my name mmm hm

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <main>
     <div class="container">
       <h1 class="app-title">Ye Olde To Do List</h1>
+        <h5 class="tre-dog">Brought to you by Trevor Mearns</h3>
         <div class="checklist-wrapper">
                 <img src="https://img.icons8.com/wired/128/000000/checklist.png" class="center">
         </div>
