changed submit functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <form id="form">
       <input id="todo-input" type="text" aria-label="Enter a new todo item" placeholder="Enter yon task." autofocus />
-      <button id="submitButton" type="button" class="btn btn-primary">
+      <button id="submitButton" type="submit" class="btn btn-primary">
         Submit
       </button>
     </form>
